--- a/modeling_notebook.ipynb
+++ b/modeling_notebook.ipynb
@@ -453,8 +453,8 @@
    ],
    "source": [
     "features_dict = dict(zip(features_df.columns, dt_fit_mm_scl.feature_importances_))\n",
-    "sorted_d = sorted(features_dict.items(), key=lambda x: x[1], reverse=True)[:10]\n",
-    "sorted_d"
+    "features_dict = sorted(features_dict.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "features_dict"
    ]
   },
   {
