--- a/twitter_scraping_notebook.ipynb
+++ b/twitter_scraping_notebook.ipynb
@@ -123,6 +123,15 @@
      "text": [
       "CRITICAL:root:twint.output:checkData:copyrightedTweet\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-06-29 22:24:41.746184 ----- Saving 2020-06-11...\n",
+      "2020-06-29 22:25:04.451017 ----- 2020-06-11 Saved!\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -151,6 +160,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
